Fix footer links, add layout adjustments, add horizontal scrollbar and background gradient and attachment.

--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -1,13 +1,20 @@
 .characterEditor {
   padding-top: 128px;
   padding-bottom: 64px;
+  background: linear-gradient(180deg, hsl(180deg, 25%, 92%)  80%,  hsl(195deg, 20%, 86%) 40%);
+  background-attachment: fixed;
+  position: relative;
+  z-index:1;
 }
 
 .maxWidthWrapper {
+ 
 }
+
 
 .header {
   padding-bottom: 64px;
+  max-width: 65%;
 }
 
 .title {
@@ -24,7 +31,11 @@
 }
 
 .characterWrapper {
+  position: fixed;
+  right: 0;
+  bottom: 0;
 }
 
 .controlColumn {
+  max-width: 50%;
 }
