--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -4,5 +4,10 @@
   background: hsl(0deg, 0%, 5%);
   color: white;
   text-align: center;
+  z-index: 2;
+}
+
+.footer a {
+  color: inherit;
 }
 
